--- a/package.json
+++ b/package.json
@@ -1,26 +1,17 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "backend proyectoFinal",
-  "main": "index.js",
-  "scripts": {
-    "server": "nodemon index.js",
-    "start": "concurrently \"npm run server\""
-  },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
-    "concurrently": "^8.0.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "json-server": "^0.17.3",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.22",
-    "npm-run-all": "^4.1.5",
-    "pg": "^8.10.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.31.1"
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.3",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   }
 }
