--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mockjs": "^1.1.0",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0"
