--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "react-datepicker": "^4.19.0",
     "react-icons": "^4.11.0",
     "stripe": "^13.9.0",
     "uuid": "^9.0.1"
